Absolute positioned elements in a relative positioned CSS3 Flexbox fail to display properly https://bugs.webkit.org/show_bug.cgi?id=58453

Reviewed by Tony Chang.

Source/WebCore:

Test: css3/flexbox/align-absolute-child.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::prepareChildForPositionedLayout):
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
(WebCore::RenderFlexibleBox::adjustAlignmentForChild):
When adjusting positioned items, adjust their static position, not their location.
(WebCore::RenderFlexibleBox::flipForRightToLeftColumn):
(WebCore::RenderFlexibleBox::flipForWrapReverse):
* rendering/RenderFlexibleBox.h:

LayoutTests:

* css3/flexbox/align-absolute-child-expected.txt: Added.
* css3/flexbox/align-absolute-child.html: Added.
* css3/flexbox/position-absolute-child-expected.txt:
* css3/flexbox/position-absolute-child.html:

Canonical link: https://commits.webkit.org/105557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118818 268f45cc-cd09-0410-ab3c-d52691b4dbfc